line_det/logs/lane_states/build.make.006.log.stderr
/home/eduardo/Robotica/AutoNOMOS2/line_det/src/lane_states/lane_states_node.cpp: In function ‘void get_motion(const Int16&)’:
/home/eduardo/Robotica/AutoNOMOS2/line_det/src/lane_states/lane_states_node.cpp:86:14: error: ‘math’ was not declared in this scope
  orientation=math.abs(val.data-90)-45;
              ^
/home/eduardo/Robotica/AutoNOMOS2/line_det/src/lane_states/lane_states_node.cpp:86:14: note: suggested alternative:
In file included from /usr/include/boost/math/special_functions/round.hpp:13:0,
                 from /opt/ros/indigo/include/ros/time.h:58,
                 from /opt/ros/indigo/include/ros/ros.h:38,
                 from /home/eduardo/Robotica/AutoNOMOS2/line_det/src/lane_states/lane_states_node.cpp:1:
/usr/include/boost/math/tools/config.hpp:264:32: note:   ‘boost::math’
 namespace boost{ namespace math{
                                ^
make[2]: *** [CMakeFiles/lane_states_node.dir/lane_states_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/lane_states_node.dir/all] Error 2
make: *** [all] Error 2
